# FUEL_Workspace_V1

./: .gitignore  README_FUEL_ROS2_DEPLOYMENT.md
reports/: 00_environment_audit.md  01_source_selection_report.md  02_build_report.md  03_runtime_smoke_test_report.md  04_visual_demo_report.md  05_final_usage_guide.md  06_p1_dds_discovery_diagnosis.md  07_p1_goal_trigger_diagnosis.md  08_p1_uav_motion_validation.md  09_p1_final_fix_summary.md  15_p2a_rviz_tf_fixed_frame_diagnosis.md  16_p2a_rviz_visual_display_fix.md  17_p2a_manual_visual_demo_guide.md  18_p2a_final_summary.md  19_p2b_continuous_exploration_diagnosis.md  20_p2b_coverage_metric_report.md  21_p2b_stuck_event_analysis.md  22_p2b_goal_frontier_trajectory_analysis.md  23_p2b_parameter_fix_report.md  24_p2b_final_summary.md  25_p2c_goal_lifecycle_root_cause.md  26_p2c_local_minimum_escape_design.md  27_p2c_fix_implementation_report.md  28_p2c_before_after_300s_comparison.md  29_p2c_final_summary.md  30_p2d_motion_chain_root_cause.md  31_p2d_path_feasibility_analysis.md  32_p2d_traj_server_stale_path_analysis.md  33_p2d_position_cmd_vs_odom_analysis.md  34_p2d_fix_implementation_report.md  35_p2d_before_after_300s_comparison.md  36_p2d_final_summary.md  37_unified_summary_log_system.md  38_github_backup_report.md  39_p2f_unified_summary_log_fix_report.md  40_p2f_coverage_completion_root_cause.md  41_p2f_goal_reselect_after_path_done_design.md  42_p2f_coverage_stall_recovery_fix_report.md  43_p2f_coverage_300s_validation.md  44_p2f_coverage_600s_validation.md  (+36 more)
scripts/: analyze_coverage_stall_and_goal_reselect.py  analyze_frontier_scoring_and_reachability.py  analyze_goal_lifecycle.py  analyze_p2b_stuck_events.py  analyze_path_feasibility.py  analyze_route_rationality.py  analyze_traj_server_stale_path.py  build.sh  check_ros2_dds_minimal.sh  check_tf_tree.sh  collect_debug_package.sh  env.sh  env_cyclonedds.sh  export_p2b_debug_package.sh  export_p2c_debug_package.sh  export_p2d_debug_package.sh  export_p2f_debug_package.sh  export_p2g_debug_package.sh  export_p2h_debug_package.sh  export_p2i_debug_package.sh  fuel_continuous_exploration_recorder.py  fuel_coverage_completion_recorder.py  fuel_frontier_reachability_recorder.py  fuel_motion_chain_recorder.py  fuel_route_rationality_recorder.py  fuel_run_commands_common.py  fuel_topic_probe.py  generate_full_run_log.py  generate_unified_summary_log.py  install_deps.sh  kill_fuel.sh  print_fuel_run_commands.sh  publish_goal_once.py  publish_rviz_map_tf.py  run_continuous_exploration_benchmark.sh  run_dds_matrix_test.sh  run_demo_two_terminals.md  run_exploration.sh  (+40 more)
src/FUEL/: CMakeLists.txt  package.xml
src/FUEL/config/: fuel_bspline_traj.yaml  fuel_exploration_fsm.yaml  fuel_frontier_fis.yaml  fuel_onboard_preflight.yaml  fuel_path_searching.yaml  fuel_plan_env.yaml  fuel_plan_manager.yaml  fuel_real_interface.yaml  fuel_safety_gate.yaml  fuel_visual_world.yaml  fuel_visual_world_exploration.yaml  mvp_params.yaml  p11_lite_complex_env.yaml
src/FUEL/include/fuel_ros2/bspline_traj/: fuel_bspline_traj_adapter.hpp
src/FUEL/include/fuel_ros2/exploration_fsm/: fuel_exploration_fsm_adapter.hpp
src/FUEL/include/fuel_ros2/frontier_fis/: fuel_frontier_fis_adapter.hpp
src/FUEL/include/fuel_ros2/onboard_preflight/: fuel_onboard_preflight_adapter.hpp
src/FUEL/include/fuel_ros2/path_searching/: fuel_grid_astar3d.hpp  fuel_path_searching_adapter.hpp
src/FUEL/include/fuel_ros2/plan_env/: fuel_plan_env_adapter.hpp
src/FUEL/include/fuel_ros2/plan_manager/: fuel_plan_manager_adapter.hpp
src/FUEL/include/fuel_ros2/real_interface/: fuel_real_interface_adapter.hpp
src/FUEL/include/fuel_ros2/safety_gate/: fuel_safety_gate_adapter.hpp
src/FUEL/launch/: exploration.launch.py  fuel_mvp.launch.py  fuel_mvp_rviz.launch.py  fuel_p10_lite_execution_loop.launch.py  fuel_p11_lite_core_exploration.launch.py  rviz.launch.py
src/FUEL/models/simple_uav/: model.config  model.sdf
src/FUEL/rviz/: fuel_bspline_traj.rviz  fuel_exploration_fsm.rviz  fuel_exploration_large_aligned.rviz  fuel_exploration_large_demo_readable.rviz  fuel_exploration_p2a_fixed_frame.rviz  fuel_frontier_fis.rviz  fuel_gazebo_rviz_aligned.rviz  fuel_mvp.rviz  fuel_path_searching.rviz  fuel_plan_manager.rviz  p11_lite_complex_acceptance.rviz  p11_lite_complex_clean_acceptance.rviz  p11_lite_core_exploration_readable.rviz
src/FUEL/scripts/: exploration_manager_lite.py  frontier_viewpoint_lite.py  fuel_ros2_quadrotor_sim_lite.py  fuel_ros2_traj_server_lite.py  fuel_topic_compat_bridge.py  fuel_world_cloud_publisher.py  gazebo_uav_trajectory_follower.py  local_sensing_lite.py  occupancy_grid_lite.py  p11_lite_collision_utils.py  p11_lite_complex_environment_adapter.py  p11_lite_frame_publisher.py  p11_lite_goal_to_path_bridge.py  p11_lite_utils.py  p11_lite_visual_markers.py  world_collision_checker.py
src/FUEL/src/bspline_traj/: fuel_bspline_traj_adapter.cpp
src/FUEL/src/exploration_fsm/: fuel_exploration_fsm_adapter.cpp
src/FUEL/src/frontier_fis/: fuel_frontier_fis_adapter.cpp
src/FUEL/src/mvp/: fuel_mvp_node.cpp
src/FUEL/src/onboard_preflight/: fuel_onboard_preflight_adapter.cpp  fuel_onboard_preflight_node.cpp
src/FUEL/src/path_searching/: fuel_grid_astar3d.cpp  fuel_path_searching_adapter.cpp
src/FUEL/src/plan_env/: fuel_plan_env_adapter.cpp
src/FUEL/src/plan_manager/: fuel_plan_manager_adapter.cpp
src/FUEL/src/real_interface/: fake_real_interface_publisher.cpp  fuel_control_bridge_node.cpp  fuel_real_interface_adapter.cpp
src/FUEL/src/safety_gate/: closed_loop_fake_follower.cpp  fuel_safety_gate_adapter.cpp  fuel_safety_gate_node.cpp
src/FUEL/test/: test_bspline_traj_adapter.cpp  test_grid_astar3d.cpp  test_onboard_preflight_adapter.cpp  test_plan_manager_adapter.cpp  test_real_interface_adapter.cpp  test_safety_gate_adapter.cpp
src/FUEL/worlds/: fuel_exploration_large_aligned.world  fuel_office.world  fuel_office_aligned.world  p11_lite_visual_empty.world
src/exploration_manager/: CMakeLists.txt  package.xml
src/exploration_manager/launch/: exploration.launch.py  rviz.launch.py
(+251 files in other folders)
